src/index.css
@import "tailwindcss";

:root {
  font-family: Inter ,system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  /* Gradients */
  --gradient-dark: linear-gradient(135deg, hsl(240 10% 3.9%), hsl(240 3.7% 15.9%));
  --gradient-accent: linear-gradient(159deg, hsl(218, 25%, 6%), hsl(240, 22%, 15%));
  --gradient-accent-flipped: radial-gradient(at 25% 25%, hsl(240, 20%, 10%), hsl(218, 25%, 6%));

  /* Custom colors */
  --blue-sky: #0084d1;
}

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
  background:
  radial-gradient(70% 55% at 50% 50%, #1b3b5a 0%, #0f2a43 35%, #071f35 60%, #040d2c 85%, #01040d 100%),
  radial-gradient(160% 130% at 10% 10%, rgba(150,50,200,0.1) 38%, rgba(0,0,0,0.9) 76%, #000208 100%),
  radial-gradient(160% 130% at 90% 90%, rgba(200,50,200,0.15) 38%, rgba(0,0,0,0.9) 76%, #000208 100%)                               
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

h1, h2 {
  font-weight: 700;
}

.nav-links {
  transition: transform .10s ease-in-out;
}

.nav-links:hover {
  color: #00a7f5;
}

/* px-5 py-5 m-2 rounded-md mb-7 card group */
.card {
  padding: 1.25rem;
  border-radius: .375rem;
  margin: .5rem;
  margin-bottom: 1rem;
  border:  none;
  transition: transform .4s ease-in-out;
}

.card:hover {
  transform: translateY(-15px);
  box-shadow: 1px 0px 39px -25px rgba(0,0,0,0.36);
  -webkit-box-shadow: 1px 0px 39px -25px rgba(0,0,0,0.36);
  -moz-box-shadow: 1px 0px 39px -25px rgba(0,0,0,0.36);
}

.skill-card {
  border-radius: .375rem;
  margin: .5rem;
  margin-bottom: 1.75rem;
  border:  none;
  transition: transform .4s ease-in-out;
}

.skill-card:hover {
  transform: translateY(-6px);
  box-shadow: 1px 0px 39px -25px rgba(0,0,0,0.36);
  -webkit-box-shadow: 1px 0px 39px -25px rgba(0,0,0,0.36);
  -moz-box-shadow: 1px 0px 39px -25px rgba(0,0,0,0.36);
}

.skills-tag {
  border-radius: 20px;
  background-color: #17283a;
  border: 1.5px solid #25486d;
  color: #1aa9fd;
  opacity: 90%;
}

.chip-button {
  padding: default;
}

.chip-button:hover {
  background-color: inherit;
  transform: scale(1.01);
}

.box-general-shadow:hover {
  -webkit-box-shadow: 0px 0px 46px -4px rgba(26, 27, 30, 1);
  -moz-box-shadow: 0px 0px 46px -4px rgba(26, 27, 30, 1);
  box-shadow: 0px 0px 46px -4px rgba(26, 27, 30, 1);
}

